2013-12-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Introduce grub_efi_packed_guid and use it where alignment is not
	guaranteed.

2013-12-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/api.h (grub_efi_device_path): Define length as
	unaligned u16 rather than u8[2].

2013-12-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ia64/dl.c (grub_arch_dl_relocate_symbols): Add checks
	for relocation range.

2013-12-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ia64/dl.c (grub_arch_dl_relocate_symbols): Handle
	non-function pcrel21b relocation. It happens with .text.unlikely
	section.

2013-12-10  Leif Lindholm <leif.lindholm@linaro.org>

	* make MAX_USABLE_ADDRESS platform-specific
	* grub-core/kern/efi/mm.c: add Vladimir's new BYTES_TO_PAGES_DOWN macro.

2013-12-10  Leif Lindholm <leif.lindholm@linaro.org>

	* grub-core/lib/fdt.c: change memcpy => grub_memcpy

2013-12-09  Jon McCune <jonmccune@google.com>

	* Add --no-rs-codes flag to optionally disable reed-solomon codes
	in grub-install and grub-bios-setup for x86 BIOS targets.

2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Add missing compile and link options for sparc64-emu.

2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement sparc64 trampolines (needed for sparc64-emu).

2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/sparc64/dl.c (grub_arch_dl_relocate_symbols): Check
	range of R_SPARC_HI22.
	Implement R_SPARC_LM22.

2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/powerpc/dl_helper.c (grub_arch_dl_get_tramp_got_size):
	Do not explicitly check for symbol table as it's already checked in
	platform-independent layer.

2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/cache.c [__ia64__]: Use our cache cleaning routine
	on ia64 as __clear_cache is a dummy on ia64.

2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>
